metadata/force-app/main/default/objects/Order/fields/Account_Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Netsuite_ID__c</fullName>
    <description>Customer Internal ID in Netsuite. If field is blank, this customer does not exist in Netsuite.</description>
    <formula>Account.Netsuite_Internal_ID__c</formula>
    <inlineHelpText>Customer Internal ID in Netsuite. If field is blank, this customer does not exist in Netsuite.</inlineHelpText>
    <label>Account Netsuite ID</label>
    <type>Text</type>
</CustomField>