metadata/force-app/main/default/objects/Order/fields/Applied_Indexation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Applied_Indexation_Rate__c</fullName>
    <description>Specifies the indexation rate applied on this order.</description>
    <inlineHelpText>Specifies the indexation rate applied on this order.</inlineHelpText>
    <label>Applied Indexation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>