metadata/force-app/main/default/objects/Order/fields/Apply_Indexation__c.field-meta.xml
<CustomField>
    <fullName>Apply_Indexation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers the Indexation process.</description>
    <inlineHelpText>Triggers the Indexation process.</inlineHelpText>
    <label>Apply Indexation</label>
    <type>Checkbox</type>
</CustomField>