metadata/force-app/main/default/objects/Order/fields/Billing_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Name__c</fullName>
    <description>Indicates Billing Account Name that should be used in the &quot;Addressee&quot; field in NetSuite.</description>
    <formula>Account.Billing_Account_Name__c</formula>
    <label>Billing Account Name</label>
    <type>Text</type>
</CustomField>