metadata/force-app/main/default/objects/Order/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <formula>IF(
OR(
  CONTAINS(Account.OEM_Account__r.Name,&quot;Acquia&quot;),
  CONTAINS(Account.OEM_Account__r.Name,&quot;Workfront&quot;),
Account.OEM_Account__r.Account_ID_18_digits__c = $Label.AWS_OEM_Account_ID
) &amp;&amp;
NOT(CONTAINS(Account.OEM_Account__r.Name, &quot;Non OEM&quot;)),
Account.OEM_Account__r.BillingCity,
Account.BillingCity)</formula>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>