metadata/force-app/main/default/objects/Order/fields/Credit_Control_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Control_Reminder_Email__c</fullName>
    <formula>IF(
OR(
  CONTAINS(Account.OEM_Account__r.Name,&quot;Acquia&quot;),
  CONTAINS(Account.OEM_Account__r.Name,&quot;Workfront&quot;)
) &amp;&amp;
NOT(CONTAINS(Account.OEM_Account__r.Name, &quot;Non OEM&quot;)),
Account.OEM_Account__r.Credit_Control_Reminder_Email__c,
Account.Credit_Control_Reminder_Email__c)</formula>
    <label>Credit Control Reminder Email</label>
    <type>Text</type>
</CustomField>