metadata/force-app/main/default/objects/Order/fields/Credit_Memo_Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Requestor_Email__c</fullName>
    <label>Credit Memo Requestor Email</label>
    <type>Email</type>
</CustomField>