metadata/force-app/main/default/objects/Order/fields/Credit_Memo_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Type__c</fullName>
    <description>Type of the credit memo</description>
    <label>Credit Memo - Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Indexation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>