metadata/force-app/main/default/objects/Order/fields/CSM_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner_Email__c</fullName>
    <description>BODEV-1669: Add CSM Owner email to Order to pass it to NetSuite. Used for the invoice reminder process.</description>
    <formula>IF(
  Account.CSM_Owner__c = &quot;0050d000006PCLm&quot; || /* Bynder Success Squad */
  Account.CSM_Owner__c = &quot;0050d000006PBk2&quot;, /* Webdam Success Squad */
  &quot;&quot;,
  Account.CSM_Owner_Email__c
)

/* Do not sync Success Squad email when they are CSM Owner */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM Owner Email</label>
    <type>Text</type>
</CustomField>