metadata/force-app/main/default/objects/Order/fields/Current_Indexation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Indexation_Rate__c</fullName>
    <description>Indexation rate of the past year of activated date used in indexation rate calculation. Eg., If order is activated is 2022, this field stores the average of indexation rates of 2021.</description>
    <inlineHelpText>Indexation rate of the previous year of activated date used in indexation rate calculation.</inlineHelpText>
    <label>Current Indexation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>