metadata/force-app/main/default/objects/Order/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <description>1 = New 2 = Existing. Corresponds to Netsuite &quot;Customer Status&quot; list values</description>
    <formula>CASE(Text(Type),
&quot;New Business-Enterprise Cloud&quot;,1,
&quot;New Business - Expansion Portal&quot;,2,
&quot;Existing Business-Renewal&quot;,2,
&quot;Existing Business-Upsell&quot;,2,
&quot;Existing Business - Internal Transfer&quot;,2,
&quot;Existing Business - Platform Transfer&quot;, 2,
&quot;Existing Business-Professional Services&quot;,2,2)</formula>
    <label>Customer Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>