metadata/force-app/main/default/objects/Order/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <description>BODEV-1765: Days Overdue on Order</description>
    <formula>if(ISPICKVAL( Payment_Status__c , &quot;Open&quot;),if (ISBLANK (Due_Date__c), NULL, if (Today() - Due_Date__c &gt; 0, Today() - Due_Date__c, NULL)),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>