metadata/force-app/main/default/objects/Order/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date the payment is due. Mapped from Netsuite.</description>
    <inlineHelpText>Date the payment is due. Mapped from Netsuite.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>