metadata/force-app/main/default/objects/Order/fields/Indexation_Applied__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When process to apply indexation has finished, this field is set to true.</description>
    <inlineHelpText>When process to apply indexation has finished, this field is set to true.</inlineHelpText>
    <label>Indexation Applied</label>
    <type>Checkbox</type>
</CustomField>