metadata/force-app/main/default/objects/Order/fields/Indexation_to_be_applied_on_pre_order__c.field-meta.xml
<CustomField>
    <fullName>Indexation_to_be_applied_on_pre_order__c</fullName>
    <description>Used for adding the indexation % to be applied on preorder by finance team.</description>
    <label>Indexation % to be applied on pre-order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>