metadata/force-app/main/default/objects/Order/fields/Invoice_Billing_Structure__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Billing_Structure__c</fullName>
    <description>Taken from the account level.</description>
    <formula>TEXT(Account.Invoice_Billing_Structure__c)</formula>
    <inlineHelpText>Taken from the account level.</inlineHelpText>
    <label>Invoice Billing Structure</label>
    <type>Text</type>
</CustomField>