metadata/force-app/main/default/objects/Order/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Used in the &quot;Opportunity to Order&quot; flow. Normally identical to the &quot;Order Start Date&quot; field. Different only when &quot;Special Billing&quot; is applied.</description>
    <inlineHelpText>Normally identical to the &quot;Order Start Date&quot; field, when &quot;Special Billing&quot; is not applied.</inlineHelpText>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>