metadata/force-app/main/default/objects/Order/fields/Invoice_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery_Method__c</fullName>
    <formula>CASE(TEXT(Account.Invoice_Delivery_Method__c),
&quot;Email&quot;,1,
&quot;Mail&quot;,2,
&quot;Upload&quot;,3,0)</formula>
    <label>Invoice Delivery Method</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>