metadata/force-app/main/default/objects/Order/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <description>Notes to be included on the customer invoice.</description>
    <inlineHelpText>Visible to the customer: Notes to be included on the customer invoice.</inlineHelpText>
    <label>Note on invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>