metadata/force-app/main/default/objects/Order/fields/Invoice_Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Netsuite_ID__c</fullName>
    <description>The Netsuite internal ID of the invoice.</description>
    <inlineHelpText>The Netsuite internal ID of the invoice.</inlineHelpText>
    <label>Invoice Netsuite ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>