metadata/force-app/main/default/objects/Order/fields/Invoice_Upload_Portal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Upload_Portal__c</fullName>
    <formula>IF(
OR(
  CONTAINS(Account.OEM_Account__r.Name,&quot;Acquia&quot;),
  CONTAINS(Account.OEM_Account__r.Name,&quot;Workfront&quot;)
) &amp;&amp;
NOT(CONTAINS(Account.OEM_Account__r.Name, &quot;Non OEM&quot;)),
Account.Invoice_Upload_Portal__c,
Account.OEM_Account__r.Invoice_Upload_Portal__c)</formula>
    <label>Invoice Upload Portal</label>
    <type>Text</type>
</CustomField>