metadata/force-app/main/default/objects/Order/fields/Is_indexation_on_order_reported__c.field-meta.xml
<CustomField>
    <fullName>Is_indexation_on_order_reported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if the indexation on the order is reported in the sales KPI</description>
    <label>Is indexation on order reported?</label>
    <type>Checkbox</type>
</CustomField>