metadata/force-app/main/default/objects/Order/fields/Netsuite_Link__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Link__c</fullName>
    <formula>IF(ISBLANK(Order_Netsuite_ID__c),&quot;&quot;,IF(Total_Order_Value__c&lt;0,
&quot;https://4196915.app.netsuite.com/app/accounting/transactions/custcred.nl?id=&quot;&amp;Order_Netsuite_ID__c,

&quot;https://4196915.app.netsuite.com/app/accounting/transactions/salesord.nl?id=&quot;&amp;Order_Netsuite_ID__c))</formula>
    <label>Netsuite Link</label>
    <type>Text</type>
</CustomField>