metadata/force-app/main/default/objects/Order/fields/Netsuite_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Order_Type__c</fullName>
    <description>1 = Contract - New
3 = Contract - Upsell
2 = Contract - Renewal
13= Contract - Downsell</description>
    <formula>CASE(Opportunity_Type__c,
&quot;New Business-Enterprise Cloud&quot;,1,
&quot;New Business - Expansion Portal&quot;,1,
&quot;Existing Business-Upsell&quot;, IF(MRR__c&lt;0,13,3),
&quot;Existing Business-Professional Services&quot;,3,
&quot;Existing Business-Renewal&quot;,2,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 = Contract - New
3 = Contract - Upsell
2 = Contract - Renewal
13= Contract - Downsell</inlineHelpText>
    <label>Netsuite Order Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>