metadata/force-app/main/default/objects/Order/fields/Netsuite_Term__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Term__c</fullName>
    <description>Term as calculated in Netsuite</description>
    <inlineHelpText>Term as calculated in Netsuite</inlineHelpText>
    <label>Netsuite Term</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>