metadata/force-app/main/default/objects/Order/fields/Non_Standard_Billing_Terms_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Billing_Terms_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If account has non-standard billing, check this box to confirm that the order has been reviewed.</description>
    <inlineHelpText>If account has non-standard billing, check this box to confirm that the order has been reviewed.</inlineHelpText>
    <label>Non-Standard Billing Terms Reviewed</label>
    <type>Checkbox</type>
</CustomField>