metadata/force-app/main/default/objects/Order/fields/NS_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Sales_Order_Number__c</fullName>
    <description>BODEV-2465: Used to store the NS sales order number in salesforce, filled using Tray.io workflow on order activation.</description>
    <label>NS Sales Order Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>