metadata/force-app/main/default/objects/Order/fields/OEM_Account_Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>OEM_Account_Netsuite_ID__c</fullName>
    <formula>Opportunity.OEM__r.Netsuite_Internal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM Account Netsuite ID</label>
    <type>Text</type>
</CustomField>